[gd_scene load_steps=6 format=3 uid="uid://8x1decpohh7n"]

[ext_resource type="Script" path="res://map_b/scripts/death_2.gd" id="1_dfugi"]
[ext_resource type="FontFile" uid="uid://c3lvkh2asrhsf" path="res://map_b/materials/Dead Wood.otf" id="2_udvbj"]
[ext_resource type="AudioStream" uid="uid://d4cd7rmdi13gi" path="res://map_b/materials/sounds/heartbeat.mp3" id="3_xmlph"]
[ext_resource type="AudioStream" uid="uid://daanb5f053xs8" path="res://map_b/materials/sounds/hover.mp3" id="4_v54vb"]
[ext_resource type="AudioStream" uid="uid://bep7488gseuoh" path="res://map_b/materials/sounds/lobby.mp3" id="5_o10u7"]

[node name="death2" type="Control" node_paths=PackedStringArray("background_music")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dfugi")
background_music = NodePath("Lobby")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 263.0
offset_right = -266.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.635294, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_udvbj")
theme_override_font_sizes/font_size = 50
text = "You have been caught by Nyxvour. The darkness claims another victim..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="menu" type="Button" parent="."]
layout_mode = 0
offset_left = 93.0
offset_top = 512.0
offset_right = 335.0
offset_bottom = 597.0
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.635294, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_udvbj")
theme_override_font_sizes/font_size = 40
text = "Back to Main Menu"
flat = true

[node name="restart" type="Button" parent="."]
layout_mode = 0
offset_left = 857.0
offset_top = 521.0
offset_right = 1074.0
offset_bottom = 606.0
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.635294, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_udvbj")
theme_override_font_sizes/font_size = 40
text = "Restart Game"
flat = true

[node name="PressSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_xmlph")

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_v54vb")

[node name="Lobby" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_o10u7")

[connection signal="mouse_entered" from="menu" to="." method="_on_button_hovered"]
[connection signal="pressed" from="menu" to="." method="_on_main_menu_pressed"]
[connection signal="mouse_entered" from="restart" to="." method="_on_button_hovered"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
